fixed home page on mobile phone

--- a/public/sass/components/_mainPageContent.scss
+++ b/public/sass/components/_mainPageContent.scss
@@ -82,7 +82,7 @@ body {
   @include respond(phone) {
     margin-left: 3rem;
     padding-top: 3.6rem;
-    margin: 0rem 1.8rem 3rem 1.8rem;
+    margin: 0rem 0.8rem 3rem 1.8rem;
   }
 
   @include respond(small-phone) {
@@ -170,8 +170,9 @@ img {
     height: 52vh;
   }
   @include respond(phone) {
-    padding-top: 7.8rem;
+    padding-top: 10.6rem;
     height: 25rem;
+    margin-bottom: 8rem;
   }
   @include respond(small-phone) {
     padding-top: 11.1rem;
@@ -638,7 +639,7 @@ figure {
   margin: 2rem 2rem;
 
   @include respond(phone) {
-    margin: 5rem 2rem 0rem 5rem;
+    margin: 3rem 2rem 0rem 5rem;
   }
 
   @include respond(small-phone) {
@@ -1011,7 +1012,7 @@ figure {
   }
 
   @include respond(phone) {
-    height: 43vh;
+    height: 37vh;
   }
 
   @include respond(small-phone) {
