--- a/public/sass/css/style.css
+++ b/public/sass/css/style.css
@@ -1385,7 +1385,7 @@ body {
     .trending {
       margin-left: 3rem;
       padding-top: 3.6rem;
-      margin: 0rem 1.8rem 3rem 1.8rem; } }
+      margin: 0rem 0.8rem 3rem 1.8rem; } }
   @media (max-width: 1380px) {
     .trending .p {
       font-size: 2rem; }
@@ -1485,8 +1485,9 @@ img {
       margin-right: 1rem; } }
   @media (max-width: 37.5em) {
     .slideshow-container_phn {
-      padding-top: 7.8rem;
-      height: 25rem; } }
+      padding-top: 10.6rem;
+      height: 25rem;
+      margin-bottom: 8rem; } }
   @media (max-width: 1380px) {
     .slideshow-container_phn .p {
       font-size: 2rem; }
@@ -1824,7 +1825,7 @@ figure {
   margin: 2rem 2rem; }
   @media (max-width: 37.5em) {
     .titles_main {
-      margin: 5rem 2rem 0rem 5rem; } }
+      margin: 3rem 2rem 0rem 5rem; } }
   @media (max-width: 1380px) {
     .titles_main .p {
       font-size: 2rem; }
@@ -2140,7 +2141,7 @@ figure {
       margin-right: 1rem; } }
   @media (max-width: 37.5em) {
     .carousel_image_small-1 {
-      height: 43vh; } }
+      height: 37vh; } }
   @media (max-width: 1380px) {
     .carousel_image_small-1 .p {
       font-size: 2rem; }
